# solarPi

./: .gitignore  Dockerfile  LICENSE  README.md  backup.sh  docker-compose.yaml  index.html  requirements.txt  restore_last.sh  setup.cfg  solarpi.rules  solarpi.service
backup/: solarpi_token.json
docker/: docker-compose.yaml  docker-compose_only_influx.yaml  docker-compose_only_inverter.yaml  docker-compose_only_sdm.yaml  docker-compose_test_inverter.yaml  docker-compose_test_sdm.yaml  solarpi-default.env
docker/backup/: Dockerfile  main.py
docker/combined/: Dockerfile  main.py  requirements.txt
docker/influxdb/: config.yml
docker/inverter/: Dockerfile  main.py  requirements.txt
docker/sdm/: Dockerfile  main.py
energy_meter/: Dockerfile  requirements.txt
script/: migrate_data.py
src/solarpi/: __init__.py  solarpi.py  utils.py
