
[metadata]
name = solarpi
version = 2.0.0
author = Dominik Prossel
description = Library for collecting solar power and energy data on a Raspberry Pi.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/musti95/solarPi
project_urls =
    Issue Tracker = https://github.com/musti95/solarPi/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License

[options]
package_dir = 
    =src
packages = find:
scripts = script/migrate_data.py
include_package_data = True
python_requires = >= 3.7
install_requires =
    sdm_modbus==0.6.1
    influxdb-client==1.34.0
    paho-mqtt==1.6.1

[options.packages.find]
where = src
